# duckdb-go-extension-example

./: .gitignore  CMakeLists.txt  _extension_distribution.yml  extension_config.cmake
.github/workflows/: ExtensionTemplate.yml  MainDistributionPipeline.yml  _extension_distribution.yml
docs/: README.md
scripts/: setup-custom-toolchain.sh
src/: CMakeLists.txt  capi_demo.cpp
src/go/: build.sh  go-extension.h  go.mod  go.sum  module.go
test/: README.md
test/sql/: quack.test
